HDIV CHANGELOG
==============
http://www.hdiv.org

Release 2.1.5
==================================

 * Java >= 1.5 is required.

Release 2.1.4
==================================

 * Use request method to define StartPages (https://github.com/hdiv/hdiv/issues/5).
 * Editable Validation and JSR303 validations in Spring MVC (https://github.com/hdiv/hdiv/issues/10).
 * Editable Validation support in Grails.
 * New 'showErrorPageOnEditableValidation' attribute in <hdiv:config> to show error page on Editable validation error.
 * Struts1 module for Hdiv. (Struts 1.3.8 support).
 * Fix Multipart request handing in Spring MVC (https://github.com/hdiv/hdiv/issues/14) and (https://github.com/hdiv/hdiv/issues/18).
 * JSF module for Hdiv. (JSF 1.1, 1.2, 2.0 and 2.1 support). Tested with Apache MyFaces and Sun RI.
 * Fix error with multivalue url params.
 * New 'sessionExpired' attribute in <hdiv:config> to define error pages when session has expired.
 * New 'org.hdiv.filter.ValidatorErrorHandler' interface to handle request validation errors. 'DefaultValidatorErrorHandler' class contains default implementation.
 * IDataComposer initialization dropped from InitListener and moved to ValidatorFilter to avoid problems with premature request initialization. Fix (https://github.com/hdiv/hdiv/issues/21)
 * JSF requires ValidatorFilter for GET request validation and IDataComposer initialization
 * Fix Thread safe error on Cipher strategy (https://github.com/hdiv/hdiv/issues/23).
 * Spring beans with generated names (https://github.com/hdiv/hdiv/issues/27).
 * Spring 3.0 or greater is required for hdiv-core.

Release 2.1.3
==================================

 * avoidValidationInUrlsWithoutParams only affects to link urls.
 * Absolute URLs are returned as absolute URLs in LinkUrlProcessor.
 * RequestDataValueProcessor for Grails applications.

Release 2.1.2
==================================

 * Confidential values are visible in the log.