@@ -25,6 +25,7 @@ import org.hdiv.state.IParameter;
 import org.hdiv.state.IState;
 import org.hdiv.state.Parameter;
 import org.hdiv.state.State;
+import org.hdiv.util.Constants;
 import org.springframework.web.util.HtmlUtils;
 
 /**
@@ -97,7 +98,7 @@ public class DataComposerMemory extends AbstractDataComposer {
 	 */
 	public String compose(String action, String parameter, String value, boolean editable) {
 
-		return this.compose(action, parameter, value, editable, false, "UTF-8");
+		return this.compose(action, parameter, value, editable, false, Constants.ENCODING_UTF_8);
 	}
 
 	/**
@@ -117,7 +118,7 @@ public class DataComposerMemory extends AbstractDataComposer {
 	 */
 	public String compose(String parameter, String value, boolean editable, boolean isActionParam) {
 
-		return this.compose(parameter, value, editable, isActionParam, "UTF-8");
+		return this.compose(parameter, value, editable, isActionParam, Constants.ENCODING_UTF_8);
 	}
 
 	/**
@@ -138,7 +139,7 @@ public class DataComposerMemory extends AbstractDataComposer {
 	 */
 	public String compose(String parameter, String value, boolean editable, String editableName) {
 
-		return this.compose(parameter, value, editable, editableName, false, "UTF-8");
+		return this.compose(parameter, value, editable, editableName, false, null, Constants.ENCODING_UTF_8);
 	}
 
 	/**
@@ -190,7 +191,7 @@ public class DataComposerMemory extends AbstractDataComposer {
 	 */
 	public String compose(String parameter, String value, boolean editable, boolean isActionParam, String charEncoding) {
 
-		return this.compose(parameter, value, editable, null, isActionParam, charEncoding);
+		return this.compose(parameter, value, editable, null, isActionParam, null, charEncoding);
 	}
 
 	/**
@@ -208,17 +209,72 @@ public class DataComposerMemory extends AbstractDataComposer {
 	 *            editable name (text or textarea)
 	 * @param isActionParam
 	 *            parameter added in action attribute
+	 * @param method
+	 *            http method, GET or POST
+	 * @return Codified value to send to the client
+	 * @since HDIV 2.1.5
+	 */
+	public String compose(String parameter, String value, boolean editable, String editableName, boolean isActionParam,
+			String method) {
+		return this.compose(parameter, value, editable, editableName, isActionParam, method, Constants.ENCODING_UTF_8);
+	}
+
+	/**
+	 * Adds a new IParameter object, generated from the values passed as parameters, to the current state
+	 * <code>state</code>. If confidentiality is activated it generates a new encoded value that will be returned by the
+	 * server for the parameter <code>parameter</code> in the encoded and memory strategies.
+	 * <p>
+	 * Custom method for form field.
+	 * 
+	 * @param parameter
+	 *            HTTP parameter
+	 * @param value
+	 *            value generated by server
+	 * @param editable
+	 *            Parameter type: editable(textbox, password,etc.) or non editable (hidden, select, radio, ...)
+	 * @param editableName
+	 *            editable name (text or textarea)
+	 * @return Codified value to send to the client
+	 * @since HDIV 2.1.5
+	 */
+	public String composeFormField(String parameter, String value, boolean editable, String editableName) {
+
+		return this.compose(parameter, value, editable, editableName, false, "POST", Constants.ENCODING_UTF_8);
+	}
+
+	/**
+	 * Adds a new IParameter object, generated from the values passed as parameters, to the current state
+	 * <code>state</code>. If confidentiality is activated it generates a new encoded value that will be returned by the
+	 * server for the parameter <code>parameter</code> in the encoded and memory strategies.
+	 * 
+	 * @param parameter
+	 *            HTTP parameter
+	 * @param value
+	 *            value generated by server
+	 * @param editable
+	 *            Parameter type: editable(textbox, password,etc.) or non editable (hidden, select, radio, ...)
+	 * @param editableName
+	 *            editable name (text or textarea)
+	 * @param isActionParam
+	 *            parameter added in action attribute
+	 * @param method
+	 *            http method, GET or POST
 	 * @param charEncoding
 	 *            character encoding
 	 * @return Codified value to send to the client
-	 * @since HDIV 1.1
+	 * @since HDIV 2.1.5
 	 */
 	public String compose(String parameter, String value, boolean editable, String editableName, boolean isActionParam,
-			String charEncoding) {
+			String method, String charEncoding) {
 
 		if (!this.isRequestStarted()) {
 			// If request not started, do nothing
 			return value;
+		}
+
+		if (method == null || method.length() == 0) {
+			// Default method is GET
+			method = "GET";
 		}
 
 		this.composeParameter(parameter, value, editable, editableName, isActionParam, charEncoding);
@@ -239,7 +295,7 @@ public class DataComposerMemory extends AbstractDataComposer {
 		IState state = (IState) this.getStatesStack().peek();
 		String action = state.getAction();
 		if (action != null) {
-			if (this.hdivConfig.isStartPage(action, isActionParam)) {
+			if (this.hdivConfig.isStartPage(action, method)) {
 				return value;
 			}
 		}
@@ -350,7 +406,8 @@ public class DataComposerMemory extends AbstractDataComposer {
 
 		if (storedParameter.getValues().size() > 0) {
 
-			this.composeParameter(newParameter, storedParameter.getValuePosition(0), false, "", false, "UTF-8");
+			this.composeParameter(newParameter, storedParameter.getValuePosition(0), false, "", false,
+					Constants.ENCODING_UTF_8);
 
 			String currentValue = null;
 			// We check the parameters since the second position because the first
@@ -370,14 +427,14 @@ public class DataComposerMemory extends AbstractDataComposer {
 	 * <p>
 	 * Removes Html Entity elements too. Like that:
 	 * </p>
-	 * <blockquote> 
-	 * &amp;#<i>Entity</i>; - <i>(Example: &amp;amp;) case sensitive</i> 
-	 * &amp;#<i>Decimal</i>; - <i>(Example: &amp;#68;)</i><br>
+	 * <blockquote> &amp;#<i>Entity</i>; - <i>(Example: &amp;amp;) case sensitive</i> &amp;#<i>Decimal</i>; -
+	 * <i>(Example: &amp;#68;)</i><br>
 	 * &amp;#x<i>Hex</i>; - <i>(Example: &amp;#xE5;) case insensitive</i><br>
 	 * </blockquote>
 	 * <p>
 	 * Based on {@link HtmlUtils.htmlUnescape}.
 	 * </p>
+	 * 
 	 * @param value
 	 *            value to decode
 	 * @param charEncoding
