@@ -95,6 +95,51 @@ public interface IDataComposer {
 	public String compose(String parameter, String value, boolean editable, boolean isActionParam, String charEncoding);
 
 	/**
+	 * Adds a new IParameter object, generated from the values passed as parameters, to the current state
+	 * <code>state</code>. If confidentiality is activated it generates a new encoded value that will be returned by the
+	 * server for the parameter <code>parameter</code> in the encoded and memory strategies.
+	 * 
+	 * @param parameter
+	 *            HTTP parameter
+	 * @param value
+	 *            value generated by server
+	 * @param editable
+	 *            Parameter type: editable(textbox, password,etc.) or non editable (hidden, select, radio, ...)
+	 * @param editableName
+	 *            editable name (text or textarea)
+	 * @param isActionParam
+	 *            parameter added in action attribute
+	 * @param method
+	 *            http method, GET or POST
+	 * @param charEncoding
+	 *            character encoding
+	 * @return Codified value to send to the client
+	 * @since HDIV 2.1.5
+	 */
+	public String compose(String parameter, String value, boolean editable, String editableName, boolean isActionParam,
+			String method, String charEncoding);
+
+	/**
+	 * Adds a new IParameter object, generated from the values passed as parameters, to the current state
+	 * <code>state</code>. If confidentiality is activated it generates a new encoded value that will be returned by the
+	 * server for the parameter <code>parameter</code> in the encoded and memory strategies.
+	 * <p>
+	 * Custom method for form field.
+	 * 
+	 * @param parameter
+	 *            HTTP parameter
+	 * @param value
+	 *            value generated by server
+	 * @param editable
+	 *            Parameter type: editable(textbox, password,etc.) or non editable (hidden, select, radio, ...)
+	 * @param editableName
+	 *            editable name (text or textarea)
+	 * @return Codified value to send to the client
+	 * @since HDIV 2.1.5
+	 */
+	public String composeFormField(String parameter, String value, boolean editable, String editableName);
+
+	/**
 	 * It generates a new encoded value for the parameter <code>parameter</code> and the value <code>value</code> passed
 	 * as parameters. The returned value guarantees the confidentiality in the encoded and memory strategies if
 	 * confidentiality indicator <code>confidentiality</code> is true.
