@@ -45,7 +45,7 @@ public class CancelTagHDIV extends CancelTag {
 	 * Process the start of this tag.
 	 * 
 	 * @exception JspException if a JSP exception has occurred
-	 * @see org.hdiv.dataComposer.IDataComposer#compose(String, String, boolean)
+	 * @see org.hdiv.dataComposer.IDataComposer#composeFormField(String, String, boolean, String)
 	 */
 	public int doStartTag() throws JspException {
 
@@ -53,7 +53,7 @@ public class CancelTagHDIV extends CancelTag {
 		IDataComposer dataComposer = HDIVUtil.getDataComposer(request);	
 
 		// this property is editable and we must check it
-		dataComposer.compose(property, "", true);
+		dataComposer.composeFormField(property, "", true, null);
 
 		return super.doStartTag();
 	}	
