@@ -57,7 +57,7 @@ public class CheckboxTagHDIV extends CheckboxTag {
 	 * Process the start of this tag.
 	 * 
 	 * @exception JspException if a JSP exception has occurred
-	 * @see org.hdiv.dataComposer.IDataComposer#compose(String, String, boolean)
+	 * @see org.hdiv.dataComposer.IDataComposer#composeFormField(String, String, boolean, String)
 	 */
 	public int doStartTag() throws JspException {
 
@@ -65,7 +65,7 @@ public class CheckboxTagHDIV extends CheckboxTag {
 		IDataComposer dataComposer = HDIVUtil.getDataComposer(request); 	
 
 		// this property is editable and we must check it
-		dataComposer.compose(prepareName(), value, true);
+		dataComposer.composeFormField(prepareName(), value, true, null);
 
 		return super.doStartTag();
 	}		
