@@ -42,7 +42,7 @@ public class PasswordTagHDIV extends PasswordTag {
 	 * Process the start of this tag.
 	 * 
 	 * @exception JspException if a JSP exception has occurred
-	 * @see org.hdiv.dataComposer.IDataComposer#compose(String, String, boolean)
+	 * @see org.hdiv.dataComposer.IDataComposer#composeFormField(String, String, boolean, String)
 	 */
 	public int doStartTag() throws JspException {
 
@@ -50,7 +50,7 @@ public class PasswordTagHDIV extends PasswordTag {
 		IDataComposer dataComposer = HDIVUtil.getDataComposer(request);
 
 		// this property is editable and we must check it
-		dataComposer.compose(prepareName(), "", true, "password");
+		dataComposer.composeFormField(prepareName(), "", true, "password");
 
 		return super.doStartTag();
 	}
