@@ -56,7 +56,7 @@ public class SelectTagHDIV extends SelectTag {
      * Process the start of this tag.
      * 
      * @exception JspException if a JSP exception has occurred
-     * @see org.hdiv.dataComposer.IDataComposer#compose(String, String, boolean)
+     * @see org.hdiv.dataComposer.IDataComposer#composeFormField(String, String, boolean, String)
      */
     public int doStartTag() throws JspException {	
 		
@@ -64,7 +64,7 @@ public class SelectTagHDIV extends SelectTag {
 		IDataComposer dataComposer = HDIVUtil.getDataComposer(request);
     			
 		// this property is editable and we must check it
-		dataComposer.compose(prepareName(), "", false);
+		dataComposer.composeFormField(prepareName(), "", false, null);
 		
 		return super.doStartTag();
     }
