@@ -45,7 +45,7 @@ public class SubmitTagHDIV extends SubmitTag {
 	 * Process the start of this tag.
 	 * 
 	 * @exception JspException if a JSP exception has occurred
-	 * @see org.hdiv.dataComposer.IDataComposer#compose(String, String, boolean)
+	 * @see org.hdiv.dataComposer.IDataComposer#composeFormField(String, String, boolean, String)
 	 */
 	public int doStartTag() throws JspException {
 
@@ -54,7 +54,7 @@ public class SubmitTagHDIV extends SubmitTag {
 
 		// this property is editable and we must check it
 		if (property != null) {
-			dataComposer.compose(prepareName(), "", true);
+			dataComposer.composeFormField(prepareName(), "", true, null);
 		}
 
 		return super.doStartTag();
