@@ -41,7 +41,7 @@ public class TextareaTagHDIV extends TextareaTag {
 	 * Process the start of this tag.
 	 * 
 	 * @exception JspException if a JSP exception has occurred
-	 * @see org.hdiv.dataComposer.IDataComposer#compose(String, String, boolean)
+	 * @see org.hdiv.dataComposer.IDataComposer#composeFormField(String, String, boolean, String)
 	 */
 	public int doStartTag() throws JspException {
 
@@ -49,7 +49,7 @@ public class TextareaTagHDIV extends TextareaTag {
 		IDataComposer dataComposer = HDIVUtil.getDataComposer(request);
 
 		// this property is editable and we must check it
-		dataComposer.compose(prepareName(), "", true, "textarea");
+		dataComposer.composeFormField(prepareName(), "", true, "textarea");
 
 		return super.doStartTag();
 	}	
